--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.0",
     "dayjs": "^1.10.6",
     "sass": "^1.39.0",
